# BarcodeBuddy

./: .gitignore  AGENT-WORKFLOW.md  AI_POLICY.md  CLAUDE.md  Dockerfile  Procfile  README.md  TECHNICAL_ARCHITECTURE_SPECIFICATION.md  config.json  config.schema.json  install-autostart.ps1  main.py  pyproject.toml  railway.toml  requirements.txt  start-app.ps1  stats.py  test_e2e.py  update-app.ps1
.constraints/: ai-privacy.json  auth-boundary.json  barcode-integrity.json  data-safety.json  file-processing-fsm.json
.patches/: handoff.md
app/: __init__.py  activity.py  admin_routes.py  ai_provider.py  ai_routes.py  ai_tools.py  alerts.py  auth.py  auth_routes.py  barcode.py  barcode_generator.py  config.py  contracts.py  database.py  documents.py  feedback.py  image_quality.py  inventory_pages.py  inventory_routes.py  inventory_ui.py  layout.py  logging_utils.py  processor.py  runtime_lock.py  scan_to_pdf.py  stats.py  team_routes.py  watcher.py
configs/: README.md  config.quality-compliance.example.json  config.receiving.example.json  config.shipping-pod.example.json
docs/: COMPLETE_SYSTEM_REFERENCE.md  PRODUCT_BLUEPRINT.md  USER_MANUAL.md  build-state.md  builder-execution-plan.md  current-system-truth.md  danpack-builder-handoff.md  danpack-system-interaction-philosophy.md  industry-workflow-research.md  operations-planner-builder-handoff.md  operations-planner-execution-plan.md  operations-planner-product-spec.md  operations-planner-technical-spec.md  packaging-industrial-operating-model.md  production-operations-blueprint.md  scan-record-builder-handoff.md  (+7 more)
(+44 files in other folders)
